# hermes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/: triton.Dockerfile
.github/workflows/: pre-commit.yaml  triton-build.yaml  unit-tests.yaml
docs/: about.rst  conf.py
hermes/: README.md
hermes/aeriel/: README.md
hermes/aeriel/client/: client.py
hermes/aeriel/monitor/: logging.py  monitor.py  process.py  utils.py
hermes/aeriel/serve/: serve.py
hermes/export/: ensemble.py  exporter.py  keras_savedmodel.py  torch_onnx.py  torch_tensorrt.py  torchscript.py  utils.py
hermes/hermes.aeriel/: pyproject.toml  tox.ini
hermes/hermes.aeriel/hermes/aeriel/client/: __init__.py  client.py
hermes/hermes.aeriel/hermes/aeriel/serve/: __init__.py  serve.py  singularity.py
hermes/hermes.aeriel/tests/client/: test_client.py
hermes/hermes.aeriel/tests/serve/: test_serve.py  test_singularity.py
hermes/hermes.cloudbreak/: pyproject.toml  test_vm.py
hermes/hermes.cloudbreak/hermes/cloudbreak/clouds/base/: kubernetes.py
hermes/hermes.cloudbreak/hermes/cloudbreak/clouds/google/: kubernetes.py  utils.py  vm.py
hermes/hermes.cloudbreak/hermes/cloudbreak/kubernetes/: __init__.py  base.py  client.py
hermes/hermes.cloudbreak/tests/unit/: test_google.py
hermes/hermes.quiver/: pyproject.toml  tox.ini
hermes/hermes.quiver/docs/: about.rst  conf.py  modules.rst
hermes/hermes.quiver/hermes/quiver/: __init__.py  model.py  model_config.py  model_repository.py  platform.py
hermes/hermes.quiver/hermes/quiver/exporters/: __init__.py  exporter.py  torch_onnx.py  torch_tensorrt.py  torchscript.py
hermes/hermes.quiver/hermes/quiver/exporters/tensorrt/: onnx.py
hermes/hermes.quiver/hermes/quiver/io/: file_system.py  local.py
hermes/hermes.quiver/hermes/quiver/streaming/: __init__.py  streaming_input.py  streaming_output.py  utils.py
hermes/hermes.quiver/tests/: test_model.py  test_model_config.py  test_model_repository.py
hermes/hermes.quiver/tests/exporters/: test_torchscript.py
hermes/hermes.quiver/tests/io/: test_io.py
hermes/hermes.quiver/tests/streaming/: test_snapshotter.py  test_streaming_input.py  test_streaming_output.py  test_streaming_utils.py
hermes/hermes.quiver/tests/unit/streaming/: test_snapshotter.py
hermes/hermes.stillwater/: pyproject.toml  test_client.py  tox.ini
hermes/hermes.stillwater/hermes/stillwater/: __init__.py  logging.py  monitor.py  utils.py
hermes/hermes.stillwater/tests/: test_monitor.py  test_process.py
hermes/hermes.stillwater/tests/monitor_data/: ensemble_config.pbtxt  stream_config.pbtxt  t0.txt  t1.txt  t2.txt  test-model_config.pbtxt
hermes/hermes.typeo/: README.md
hermes/hermes.typeo/docs/: conf.py  modules.rst
hermes/hermes.typeo/hermes/typeo/: actions.py
hermes/hermes.typeo/tests/: test_config_parsing.py
hermes/quiver/: README.md  __init__.py  model.py  model_config.py  model_repository.py  tox.ini  types.py
hermes/quiver/exporters/: __init__.py  ensemble.py  exporter.py  keras_savedmodel.py  torch_onnx.py  torch_tensorrt.py  torchscript.py  utils.py
hermes/quiver/exporters/tensorrt/: onnx.py
hermes/quiver/io/: exceptions.py  file_system.py  gcs.py  local.py
hermes/quiver/streaming/: streaming_input.py  streaming_output.py  utils.py
hermes/repo/: __init__.py  model.py  model_config.py  model_repository.py
libs/hermes/: README.md
libs/hermes/hermes.cloudbreak/: pyproject.toml
libs/hermes/hermes.cloudbreak/hermes/cloudbreak/: logging.py  utils.py
libs/hermes/hermes.cloudbreak/hermes/cloudbreak/clouds/base/: __init__.py  kubernetes.py  resource.py  vm.py
libs/hermes/hermes.cloudbreak/hermes/cloudbreak/clouds/google/: __init__.py  kubernetes.py  vm.py
libs/hermes/hermes.cloudbreak/hermes/cloudbreak/kubernetes/: base.py  client.py
libs/hermes/hermes.cloudbreak/tests/unit/: test_google.py
libs/hermes/hermes.gwftools/: environment.yaml  pyproject.toml  tox.ini
libs/hermes/hermes.gwftools/hermes/gwftools/: __init__.py  gwftools.py
libs/hermes/hermes.gwftools/tests/: test_gwftools.py
libs/hermes/hermes.quiver/: pyproject.toml  tox.ini
libs/hermes/hermes.quiver/docs/: conf.py  index.rst  modules.rst
libs/hermes/hermes.quiver/hermes/quiver/: model.py  model_config.py  model_repository.py  platform.py  types.py
libs/hermes/hermes.quiver/hermes/quiver/exporters/: __init__.py  ensemble.py  exporter.py  keras_savedmodel.py  torch_onnx.py  torch_tensorrt.py  utils.py
libs/hermes/hermes.quiver/hermes/quiver/exporters/tensorrt/: onnx.py
libs/hermes/hermes.quiver/hermes/quiver/io/: __init__.py  file_system.py  gcs.py  local.py
libs/hermes/hermes.quiver/hermes/quiver/streaming/: __init__.py  streaming_input.py  streaming_output.py  utils.py
libs/hermes/hermes.quiver/tests/unit/: conftest.py  test_io.py  test_keras_savedmodel_exporter.py  test_model.py  test_model_config.py  test_torch_onnx_exporter.py  utils.py
libs/hermes/hermes.quiver/tests/unit/exporters/: test_exporter_utils.py  test_torch_onnx_exporter.py
libs/hermes/hermes.quiver/tests/unit/streaming/: test_aggregator.py
libs/hermes/hermes.stillwater/: pyproject.toml  test_client.py
libs/hermes/hermes.stillwater/hermes/stillwater/: __init__.py  client.py  monitor.py  process.py  (+1 more)
libs/hermes/hermes.typeo/: pyproject.toml  tox.ini
libs/hermes/hermes.typeo/docs/: index.rst
libs/hermes/hermes.typeo/hermes/typeo/: __init__.py  actions.py  typeo.py
libs/hermes/hermes.typeo/tests/: _test_config.py  test_config_parsing.py  test_typeo.py
libs/hermes/hermes.typeo/tests/configs/: basic.toml  bool-false.toml  bool-true.toml
libs/hermes/hermes.typeo/tests/unit/: test_typeo.py
tests/aeriel/client/: test_client.py
tests/aeriel/monitor/: test_process.py
tests/aeriel/serve/: test_serve.py
tests/quiver/: conftest.py  test_model_repository.py
tests/quiver/exporters/: test_exporter_utils.py  test_keras_savedmodel_exporter.py  test_torch_onnx_exporter.py  test_torchscript.py
tests/quiver/streaming/: test_streaming_input.py  test_streaming_output.py  test_streaming_utils.py
(+1 files in other folders)
