[tool.poetry]
name = "ml4gw-hermes"
version = "0.2.0"
description = "Inference-as-a-Service deployment made simple"
authors = [
    "Alec Gunny <alec.gunny@ligo.org>",
    "Ethan Marx <emarx@mit.edu>"
]
packages = [
    {include = "hermes"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tritonclient = {extras = ["all"], version = "^2.22"}

# aeriel.client
numpy = {version = "^1.22", optional = true}

# aeriel.serve
spython = {version = "^0.2", optional = true}

# aeriel.monitor
tblib = "^1.7"
urllib3 = "^1.26"

# quiver
protobuf = "^3.17"
requests = "^2.26.0"

# quiver optional dependencies
tensorflow = {version = "<2.17", optional = true}
tf-keras = {version = "~2.16", optional = true}
torch = {version = "^2.0", optional = true}
google-cloud-storage = {version = "^1.38", optional = true }
nvidia-tensorrt = { version = "^8.0", optional = true, source = "ngc" }
onnx = {version = "^1.15.0", optional = true}

[tool.poetry.extras]
# quiver 
tensorflow = ["tensorflow", "tf-keras"]
torch = ["torch", "onnx", "urllib3"]
gcs = ["google-cloud-storage"]
tensorrt = ["nvidia-tensorrt"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16"
pytest = "^6.2"
pytest-depends = "^1.0"
tox = "^4.12.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
markers = [
    "tensorflow: tests that utilize TensorFlow backend",
    "torch: tests that utilize Torch backend",
    "gcs: tests that utilize Google Cloud Storage file system"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | _build
  | dist
  | docs
)/
'''

[tool.isort]
known_first_party = ["hermes"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
