[tool.poetry]
name = "hermes.quiver"
version = "0.1.0"
description = "Model export utilities"
authors = ["Alec Gunny <alecg@mit.edu>"]
packages = [
    {include = "hermes"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tritonclient = {extras = ["all"], version = "^2.22"}
protobuf = "^3.17"
requests = "^2.26.0"

# optional dependencies
# tensorlfow optional dependencies
tensorflow = {version = "^2.3", optional = true }
# explicitly adding a libclang dependency for now
# due to this transient issue
# https://pythonissues.com/issues/2674747
# TODO: check if this has been resolved
libclang = {version = "<12.0", optional = true}

# torch optional dependencies
torch = {version = "^1.7", optional = true }
# for some reason this is missing in the `requests`
# install in the torch environment, so add it as
# an optional dependency just for that extra
urllib3 = { version = "^1.26", optional = true }

# gcs filesystem backend optional dependencies
google-cloud-storage = {version = "^1.38", optional = true }

# tensorrt export platform optional dependencies
nvidia-tensorrt = { version = "^8.0", optional = true, source = "ngc" }

[tool.poetry.extras]
tensorflow = ["tensorflow", "libclang"]
torch = ["torch", "urllib3"]
gcs = ["google-cloud-storage"]
tensorrt = ["nvidia-tensorrt"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[[tool.poetry.source]]
# NVIDIA pypi repo for tensorrt install
name = "ngc"
url = "https://pypi.ngc.nvidia.com"

[build-system]
requires = ["poetry>=1.2.0a2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "tensorflow: tests that utilize TensorFlow backend",
    "torch: tests that utilize Torch backend",
    "gcs: tests that utilize Google Cloud Storage file system"
]
