[tool.poetry]
name = "hermes.quiver"
version = "0.1.0"
description = "Model export utilities"
authors = ["Alec Gunny <alecg@mit.edu>"]
packages = [
    {include = "hermes"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
tritonclient = {extras = ["all"], version = "^2.22"}
protobuf = "^3.17"
requests = "^2.26.0"

# optional dependencies
tensorflow = {version = "^2.3", optional = true}
torch = {version = "^1.7", optional = true}
google-cloud-storage = {version = "^1.38", optional = true }
nvidia-tensorrt = { version = "^8.0", optional = true, source = "ngc" }

[tool.poetry.extras]
tensorflow = ["tensorflow"]
torch = ["torch", "urllib3"]
gcs = ["google-cloud-storage"]
tensorrt = ["nvidia-tensorrt"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[[tool.poetry.source]]
# NVIDIA pypi repo for tensorrt install
name = "ngc"
url = "https://pypi.ngc.nvidia.com"

[build-system]
requires = ["poetry>=1.2.0a2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "tensorflow: tests that utilize TensorFlow backend",
    "torch: tests that utilize Torch backend",
    "gcs: tests that utilize Google Cloud Storage file system"
]
