[tool.poetry]
name = "hermes.cloudbreak"
version = "0.1.0"
description = "Cloud orchestration utilites"
authors = ["Alec Gunny <alecg@mit.edu>"]
packages = [
    {include = "hermes"}
]

[tool.poetry.dependencies]
python = "^3.8"

# generic utilities
rich = "^10.7"
kubernetes = "^17.17"
paramiko = "^2.7"
scp = "^0.14"

# google cloud utilities
# TODO: make optional
google-cloud-container = "^2.7"
google-cloud-compute = "^0.5"
google-cloud-storage = "^1.38"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"
