[tool.poetry]
name = "hermes.quiver"
version = "0.1.0"
description = "Model export utilities"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
packages = [
    {include = "hermes"}
]

[tool.poetry.dependencies]
python = "^3.8"
tritonclient = {extras = ["all"], version = "^2.5.0", source = "ngc"}
protobuf = "^3.17"

# optional dependencies
tensorflow = {version = "^2.3", optional = true}
torch = {version = "^1.7", optional = true}
google-cloud-storage = {version = "^1.38", optional = true}

[tool.poetry.extras]
tensorflow = ["tensorflow"]
torch = ["torch"]
gcs = ["google-cloud-storage"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[[tool.poetry.source]]
# NVIDIA pypi repo for tritonclient install
name = "ngc"
url = "https://pypi.ngc.nvidia.com"
