[tool.poetry]
name = "hermes.typeo"
version = "0.1.0"
description = "Utilities for running functions as scripts"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
packages = [
    {include = "hermes"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
