[tool.poetry]
name = "hermes.typeo"
version = "0.1.4"
description = "Utilities for running functions as scripts"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"
packages = [
    {include = "hermes"}
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-depends = "^1.0"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
